# market

./: .TODO  .env  .gitignore  Cargo.toml  readme.md
config/: company.txt  industry.txt
migrations/2020-03-18-050909_create_ledger/: down.sql  up.sql
migrations/2020-03-18-051100_create_company/: up.sql
migrations/2020-03-19-050909_create_ledger/: up.sql
migrations/2020-03-21-130459_create_dividend/: down.sql  up.sql
migrations/2020-03-30-224159_create_industry/: down.sql  up.sql
migrations/2020-03-31-224113_create_industry_map/: down.sql  up.sql
migrations/2020-03-31-224123_create_industry_value/: down.sql  up.sql
migrations/2020-03-31-224213_create_industry_map/: up.sql
migrations/2020-09-06-111851_create_projected_dividend/: down.sql  up.sql
sql/: dropAll.sql
src/: initialize.rs  lib.rs  model.rs  schema.rs  server.rs
src/connector/: company.rs  dividend.rs  ledger.rs  mod.rs
src/connector/company/: mod.rs
src/connector/company/dividend/: mod.rs  projected.rs
src/connector/industry/: map.rs  mod.rs  value.rs
src/state/: load.rs  mod.rs  save.rs
src/state/section/: mod.rs
src/state/section/option/: mod.rs  step.rs  volatility.rs
src/state/section/session/: date.rs  mod.rs
src/step/: mod.rs
src/util/: mod.rs  random.rs
